--- a/_config.yml
+++ b/_config.yml
@@ -102,4 +102,6 @@ theme: landscape
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+  repo: https://gh_token@github.com/Xiaoming985/xiaoming985.github.io.git
+  branch: gh-pages
